--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,6 @@
             "styles": [
               "src/styles.scss",
               "node_modules/todomvc-app-css/index.css"
-              
             ],
             "scripts": []
           },
@@ -125,8 +124,13 @@
               "devServerTarget": "Task:serve:production"
             }
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
-    }},
+    }
+  },
   "defaultProject": "Task"
 }
